// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`[Field Component] renders WithCheckbox without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field rcx-css-w18bmj"
    >
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-justify-space-between rcx-items-center rcx-mbs-4 rcx-mbe-2 rcx-color-font-secondary-info"
      >
        <label
          class="rcx-box rcx-box--full rcx-field__label rcx-label rcx-css-6cnl9o"
          for="fieldWithCheckbox"
        >
          Label
          <span
            class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
          >
            <span
              hidden=""
              id="fieldWithCheckboxInfo"
            >
              this is a info label
            </span>
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
              title="this is a info label"
            >
              
            </i>
          </span>
          <span
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-label__required rcx-mis-4"
          >
            *
          </span>
        </label>
        <label
          class="rcx-box rcx-box--full rcx-check-box"
        >
          <input
            aria-describedby="fieldWithCheckboxInfo"
            class="rcx-box rcx-box--full rcx-check-box__input"
            id="fieldWithCheckbox"
            type="checkbox"
          />
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-check-box__fake"
          />
        </label>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__description rcx-font-p2 rcx-mb-2 rcx-color-font-secondary-info"
      >
        Description
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error rcx-font-c1 rcx-mb-2 rcx-color-font-danger"
      >
        Error feedback
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-justify-space-between rcx-items-center rcx-mbs-4 rcx-mbe-2 rcx-color-font-secondary-info"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint rcx-font-c1 rcx-mb-2 rcx-color-font-secondary-info"
        >
          Hint
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link rcx-font-c1 rcx-mb-2 rcx-color-font-info"
          href="#"
          target="_blank"
        >
          Link
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithRadioButton without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field rcx-css-w18bmj"
    >
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-justify-space-between rcx-items-center rcx-mbs-4 rcx-mbe-2 rcx-color-font-secondary-info"
      >
        <label
          class="rcx-box rcx-box--full rcx-field__label rcx-label rcx-css-6cnl9o"
          for="fieldWithRadio"
        >
          Label
          <span
            class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
          >
            <span
              hidden=""
              id="fieldWithRadioInfo"
            >
              this is a info label
            </span>
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
              title="this is a info label"
            >
              
            </i>
          </span>
          <span
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-label__required rcx-mis-4"
          >
            *
          </span>
        </label>
        <label
          class="rcx-box rcx-box--full rcx-radio-button"
        >
          <input
            aria-describedby="fieldWithRadioInfo"
            class="rcx-box rcx-box--full rcx-radio-button__input"
            id="fieldWithRadio"
            type="radio"
          />
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-radio-button__fake"
          />
        </label>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__description rcx-font-p2 rcx-mb-2 rcx-color-font-secondary-info"
      >
        Description
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error rcx-font-c1 rcx-mb-2 rcx-color-font-danger"
      >
        Error feedback
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-justify-space-between rcx-items-center rcx-mbs-4 rcx-mbe-2 rcx-color-font-secondary-info"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint rcx-font-c1 rcx-mb-2 rcx-color-font-secondary-info"
        >
          Hint
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link rcx-font-c1 rcx-mb-2 rcx-color-font-info"
          href="#"
          target="_blank"
        >
          Link
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithTextArea without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field rcx-css-w18bmj"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label rcx-css-6cnl9o"
        for="fieldWithTextArea"
      >
        Label
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
            id="fieldWithTextAreaInfo"
          >
            this is a info label
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="this is a info label"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-mis-4"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description rcx-font-p2 rcx-mb-2 rcx-color-font-secondary-info"
      >
        Description
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-justify-space-between rcx-items-center rcx-mbs-4 rcx-mbe-2 rcx-color-font-secondary-info"
      >
        <textarea
          aria-describedby="fieldWithTextAreaInfo"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-textarea rcx-input-box"
          cols="1"
          id="fieldWithTextArea"
          size="1"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error rcx-font-c1 rcx-mb-2 rcx-color-font-danger"
      >
        Error feedback
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-justify-space-between rcx-items-center rcx-mbs-4 rcx-mbe-2 rcx-color-font-secondary-info"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint rcx-font-c1 rcx-mb-2 rcx-color-font-secondary-info"
        >
          Hint
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link rcx-font-c1 rcx-mb-2 rcx-color-font-info"
          href="#"
          target="_blank"
        >
          Link
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithTextInput without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field rcx-css-w18bmj"
    >
      <label
        class="rcx-box rcx-box--full rcx-field__label rcx-label rcx-css-6cnl9o"
        for="fieldWithText"
      >
        Label
        <span
          class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
        >
          <span
            hidden=""
            id="fieldWithTextInfo"
          >
            this is a info label
          </span>
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
            title="this is a info label"
          >
            
          </i>
        </span>
        <span
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-label__required rcx-mis-4"
        >
          *
        </span>
      </label>
      <span
        class="rcx-box rcx-box--full rcx-field__description rcx-font-p2 rcx-mb-2 rcx-color-font-secondary-info"
      >
        Description
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-justify-space-between rcx-items-center rcx-mbs-4 rcx-mbe-2 rcx-color-font-secondary-info"
      >
        <input
          aria-describedby="fieldWithTextInfo"
          class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--type-text rcx-input-box"
          id="fieldWithText"
          size="1"
          type="text"
        />
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error rcx-font-c1 rcx-mb-2 rcx-color-font-danger"
      >
        Error feedback
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-justify-space-between rcx-items-center rcx-mbs-4 rcx-mbe-2 rcx-color-font-secondary-info"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint rcx-font-c1 rcx-mb-2 rcx-color-font-secondary-info"
        >
          Hint
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link rcx-font-c1 rcx-mb-2 rcx-color-font-info"
          href="#"
          target="_blank"
        >
          Link
        </a>
      </span>
    </div>
  </div>
</body>
`;

exports[`[Field Component] renders WithToggleSwitch without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-field rcx-css-w18bmj"
    >
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-justify-space-between rcx-items-center rcx-mbs-4 rcx-mbe-2 rcx-color-font-secondary-info"
      >
        <label
          class="rcx-box rcx-box--full rcx-field__label rcx-label rcx-css-6cnl9o"
          for="fieldWithToggle"
        >
          Label
          <span
            class="rcx-box rcx-box--full rcx-label__info rcx-css-wcp0mp"
          >
            <span
              hidden=""
              id="fieldWithToggleInfo"
            >
              this is a info label
            </span>
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-info-circled rcx-icon"
              title="this is a info label"
            >
              
            </i>
          </span>
          <span
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-label__required rcx-mis-4"
          >
            *
          </span>
        </label>
        <label
          class="rcx-box rcx-box--full rcx-toggle-switch"
        >
          <input
            aria-describedby="fieldWithToggleInfo"
            class="rcx-box rcx-box--full rcx-toggle-switch__input"
            id="fieldWithToggle"
            type="checkbox"
          />
          <i
            aria-hidden="true"
            class="rcx-box rcx-box--full rcx-toggle-switch__fake"
          />
        </label>
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__description rcx-font-p2 rcx-mb-2 rcx-color-font-secondary-info"
      >
        Description
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__error rcx-font-c1 rcx-mb-2 rcx-color-font-danger"
      >
        Error feedback
      </span>
      <span
        class="rcx-box rcx-box--full rcx-field__row rcx-d-flex rcx-flex-row rcx-flex-nowrap rcx-justify-space-between rcx-items-center rcx-mbs-4 rcx-mbe-2 rcx-color-font-secondary-info"
      >
        <span
          class="rcx-box rcx-box--full rcx-field__hint rcx-font-c1 rcx-mb-2 rcx-color-font-secondary-info"
        >
          Hint
        </span>
        <a
          class="rcx-box rcx-box--full rcx-field__link rcx-font-c1 rcx-mb-2 rcx-color-font-info"
          href="#"
          target="_blank"
        >
          Link
        </a>
      </span>
    </div>
  </div>
</body>
`;
